Find working compromise for overflow issue + aos animations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,7 @@ body {
     margin: 0px;
     padding: 0px;
 }
+
+html {
+    overflow-x: hidden;
+}
